[package]
name = "hush-crypto"
version = "0.1.0"
edition = "2021"
description = "Signal Protocol wrapper for Hush (X3DH, Double Ratchet, WASM + native)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libsignal-dezire = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = [] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

[features]
default = []
