[package]
name = "hush-crypto"
version = "0.2.0"
edition = "2021"
description = "MLS (RFC 9420) cryptographic foundation for Hush — credential and KeyPackage generation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openmls = { version = "0.8.1", default-features = false, features = ["openmls_rust_crypto"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = { version = "0.5.0", features = ["clonable"] }
openmls_memory_storage = "0.5.0"
openmls_traits = "0.5.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"
openmls = { version = "0.8.1", default-features = false, features = ["openmls_rust_crypto", "js"] }

# Patch: sha3 v0.11.0-rc.8 (pulled in by x-wing → hpke-rs-rust-crypto) requires
# keccak v0.2.0-rc.2, but cargo resolves to the stable 0.2.0 which is missing the
# `p1600` function added in the RC.  Vendor the RC2 pre-release to unblock compilation.
[patch.crates-io]
keccak = { path = "vendor/keccak" }

[features]
default = []
